<resources>
    <string name="app_name">Final Project</string>
    <string name="soccerHighlights">Soccer match Highlights</string>
    <string name="JoshMpaka">By: Joshua Mpaka</string>
    <string name="songLyricsSearch">Song Lyrics Search</string>
    <string name="DevynnL">By: Devynn Lyle</string>
    <string name="Deezer">Deezer Song search api</string>
    <string name="DylanWilc">By: Dylan Wilcox</string>
    <string name="GeoDataSource">Geo data source</string>
    <string name="CarmenL">By: Carmen Luong</string>
    <string name="SongSearchPageName">Song Lyric Search</string>
    <string name="enterYaEmail">Please enter your email to continue:  </string>
    <string name="yourEmailHere">"Your email here: "</string>
    <string name="lyricContinueButt">Continue to Lyric search</string>
    <string name="lyricemailtoast">We won\'t send you emails! This is for research purposes only.</string>
    <string name="apps_name">Final Project</string>
    <string name="enterSong">"Enter song name: "</string>
    <string name="type_here">"Type here "</string>
    <string name="enterGroup">"Enter artist or group: "</string>
    <string name="lyricsearchbutton">Search!!</string>
    <string name="favorites">All of your favorites!</string>
    <string name="googleit">   Or try Google!</string>
    <string name="Lyrics">Lyrics</string>
    <string name="saveSongbutt">*Favorite this*</string>
    <string name="FavoritesP">Your Favorites</string>
    <string name="returnButt">Back to search</string>
    <string name="soccIconName">Match Highlights</string>
    <string name="GEO">GEO Data Source</string>
    <string name="deezI">Deezer Song Lyrics</string>
    <string name="aboutThisProject">About this project</string>
    <string name="songlyrichelpitem">This is the song lyric search activity, written by : Devynn Lyle</string>
    <string name="slhelpitem">Song Lyric Search Item</string>
    <string name="open" />
    <string name="close" />
    <string name="menuItem">Options</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="longitude_text">Longitude: </string>
    <string name="latitude_text">Latitude: </string>
    <string name="search_button">Search</string>
    <string name="favourite_button">Favourites</string>
    <string name="remove_from_favourite">Remove from favourite</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="google_map">Go to Google Maps</string>
    <string name="removed_variable_from_favourites">Removed %1$s from favourites.</string>
    <string name="added_variable_to_favourites">Added %1$s to favourites.</string>
    <string name="help_menu">Help</string>
    <string name="how_to_title">How to use this feature</string>
    <string name="how_to_message">Enter latitude and longitude numbers to search for nearby cities. Press on a city to see the details and to favourite the city. Press the Favourites button to see all your favourites.</string>
    <string name="country_text_variable">Country: %1$s</string>
    <string name="region_text_variable">Region: %1$s</string>
    <string name="city_text_variable">City: %1$s</string>
    <string name="currency_text_variable">Currency: %1$s</string>
    <string name="latitude_text_variable">Latitude: %1$s</string>
    <string name="longitude_text_variable">Longitude: %1$s</string>
    <string name="found_cities">Found %1$d cities nearby.</string>
    <string name="geo_data_title">Search for nearby cities</string>
    <string name="city_data_title">City Information</string>
    <string name="written_by">This is the %1$s activity, written by %2$s.</string>
    <string name="please_give_generously">Please give generously</string>
    <string name="how_much_money">How much money do you want to donate?</string>
    <string name="thank_you">Thank you</string>


    <string name="lyricIconTitle">Lyrics Song Search</string>
    <string name="deezerContinueButt">Continue to Deezer song search</string>
    <string name="deezeremailtoast">We won\'t send you emails! This is for research purposes only.</string>
    <string name="deezerhelpitem">This is the Deezer song search activity, written by : Dylan Wilcox</string>
    <string name="DeezerSearchTitle">Deezer Song Search</string>
    <string name="searchSongs">Search and Listen to music you want!</string>
    <string name="enterSongHere">Enter your artist here!</string>
    <string name="searchButton">Search for Artist</string>
    <string name="favouriteButton">Go to Favourites</string>
    <string name="errorSearching">Unable to search, please enter an artist</string>
    <string name="artistTitleTextField">Artist Name:</string>
    <string name="durationTextField">Song Duration:</string>
    <string name="albumNameTextField">Album Name:</string>
    <string name="albumCoverImageView">Cover Art:</string>
    <string name="deezerDeleteButton">Delete?</string>
    <string name="deezerSaveButton">Clear</string>

    <string name="Game_Title_header">GameTitle</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="url">Watch Match highlights</string>
    <string name="add_to_fav">Add to Favorites</string>
    <string name="favouritesGames">Favorites</string>
    <string name="geo_app">GEO</string>
    <string name="deezer_app">Deezer</string>
    <string name="songs_lyrics">Songs and Lyrics</string>
    <string name="soccerHelp">This is the Main soccer activity, written by : Joshua Mpaka</string>
    <string name="remove_from_db">Remove from Favorite</string>
    <string name="goToFav">Go to Favorites</string>
</resources>