<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CST2335"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"/>

    <ImageView
        android:layout_width="422dp"
        android:layout_height="162dp"
        android:src="@drawable/banner"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soccerHighlights"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="@string/JoshMpaka" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songLyricsSearch"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="@string/DevynnL"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Deezer"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="@string/DylanWilc"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GeoDataSource"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="@string/CarmenL"/>


</LinearLayout>