<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/song_lyrics"
        android:icon="@drawable/song_lyrics"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="TODO" />

    <item android:id="@+id/geodatasourceitem"
        android:title="@string/geo_app"
        android:icon="@drawable/geo"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/deezersongsearchitem"
        android:title="@string/deezer_app"
        android:icon="@drawable/deezer"
        android:orderInCategory="100"
        app:showAsAction="always"/>


    <item android:id="@+id/help_item"
        android:icon="@drawable/soccer"
        android:title="@string/aboutThisProject"
        app:showAsAction="never"
        android:orderInCategory="0"/>


</menu>
