<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/lyricsimg"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@+id/mainemailpagetextview"
        android:layout_marginTop="-59dp"

        app:srcCompat="@drawable/music_banner" />

    <TextView
        android:id="@+id/mainemailpagetextview"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SongSearchPageName"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/enterEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        android:layout_below="@+id/lyricsimg"
        android:text="@string/enterYaEmail"/>

    <ImageButton
        android:id="@+id/questionButton"
        android:layout_width="38dp"
        android:layout_height="27dp"
        android:layout_below="@+id/lyricsimg"
        android:layout_marginLeft="-52dp"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@+id/LyricEmail"
        app:srcCompat="@drawable/questionmarkemail" />

    <EditText
        android:id="@+id/LyricEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionButton"
        android:inputType="textEmailAddress"
        android:hint="@string/yourEmailHere"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LyricEmail"
        android:text="@string/lyricContinueButt" />


</RelativeLayout>
