<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeezerActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/TB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>



    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start"
        >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/DeezerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchSongs"
            android:textAlignment="center"
            android:textSize="35dp"
            />

        <EditText
            android:id="@+id/searchedSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DeezerTitle"
            android:hint="@string/enterSongHere"
            />

        <ImageView
            android:id="@+id/deezerimg"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_below="@+id/searchedSong"
            app:srcCompat="@drawable/deezer_banner"
            />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/deezerimg"
            android:text="@string/searchButton"
            />

        <Button
            android:id="@+id/favouriteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/favouriteButton"
            />


        <ProgressBar style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_below="@id/searchButton"
            android:id="@+id/deezerLoadingBar"
            />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/navigation_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>